# moonbit-component-generator

./: .gitignore  .gitmodules  .mise.toml  Cargo.toml  README.md  build.rs  moon.mod.json  update-bundle.sh
.github/workflows/: ci.yaml
bundled-core/: .gitignore  moon.mod.json
moonc_wasm/: .mise.toml  Cargo.toml  build.rs  moon.mod.json
moonc_wasm/src/: cross_platform.rs  lib.rs  wasmoo_extern.rs
moonc_wasm/src/moonc/: moonc.js.new
moonc_wasm/tests/: cross_platform_tests.rs  integration_tests.rs  simple_test.rs  unit_tests.rs
src/: get_script.rs  lib.rs  typed_config.rs
src/moonc_wasm/: mod.rs  moonc  wasmoo_extern.rs
wit/: wasi-cli.wit  wasi-config.wit  wasi-io.wit
