[package]
name = "moonbit-component-generator"
version = "0.1.0"
edition = "2024"

[workspace]

[lib]
harness = false

[dependencies]
anyhow = "1"
camino = "1.1.10"
camino-tempfile = "1.4.1"
heck = "0.5.0"
include_dir = "0.7.4"
indoc = "2.0.6"
lazy_static = "1.5.0"
log = "0.4.27"
moonc_wasm = { path = "moonc_wasm" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
topologic = "1.1.0"
wit-bindgen-core = "0.43.0"
wit-bindgen-moonbit = { version = "0.43.0", no-default-features = true }
wit-component = "0.235.0"
wit-parser = "0.235.0"

[dev-dependencies]
test-r = { version = "2.2.0", default-features = false }
pretty_env_logger = "0.5.0"
